Menambahkan index2.html, merubah warna button pada footer

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
    	<section id="footer"> 
 		<div class="container-fluid">
 		   <div class="container">
-		   		<a href="https://api.whatsapp.com/send?phone=628992539793" target="_blank" class="btn btn-warning btn-lg btn-block"> Pesan Lewat WA Sekarang</a>
+		   		<a href="https://api.whatsapp.com/send?phone=628992539793" target="_blank" class="btn btn-primary btn-lg btn-block"> Pesan Lewat WA Sekarang</a>
 		   </div>
 		</div>   		
    	</section>
